initial front end build

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,13 +5,12 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
+
+  <!-- Latest compiled and minified CSS -->
+
   </head>
     <body>
-      <h1>hello test</h1>
-      <script>
-      
 
-      </script>
 
     </body>
 </html>
